@@ -12,10 +12,6 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
 }
 
-javaCompile {
-    jvmArgs(['--enable-preview'])
-}
-
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
